--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 .embed-container {
   position: relative;
   padding-bottom: 56.25%;
+  padding-top: 25px;
   height: 0;
   overflow: hidden;
   max-width: 100%;
