--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,36 @@
   width: 100%;
   height: 100%;
 }
+
+h1 {
+  font-size:35px;
+  font-weight: 500;
+}
+
+header {
+  width:270px;
+  float:none;
+  position:fixed;
+  -webkit-font-smoothing:subpixel-antialiased;
+}
+
+header li {
+  width:89px;
+  float:none;
+  border-right:1px solid #e0e0e0;
+  height:40px;
+}
+
+section {
+  width:500px;
+  float:none;
+  padding-bottom:50px;
+}
+
+footer {
+  width:270px;
+  float:none;
+  position:fixed;
+  bottom:50px;
+  -webkit-font-smoothing:subpixel-antialiased;
+}
