--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,10 @@
       {{ content }}
 
       <!--</section> -->
+      
+      <footer>
+          <p><small> contact <a href="minsookim@mednet.ucla.edu">minsookim@mednet.ucla.edu</a></small></p>
+      </footer>
       <!-- <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
