update soundcloud embed

--- a/_includes/soundcloudPlayer.html
+++ b/_includes/soundcloudPlayer.html
@@ -1,8 +1,6 @@
-<div class="embed-container">
+<div class="embed-soundcloud">
   <iframe
       src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ include.id }}"
-      width="500"
-      height="166"
       frameborder="0"
       allowfullscreen="">
   </iframe>
