--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,22 @@
   height: 100%;
 }
 
+.embed-soundcloud {
+  width: 500px;
+  height: 166px;
+  position: relative;
+  max-width: 100%;
+}
+
+.embed-soundcloud iframe, .embed-soundcloud object, .embed-soundcloud embed {
+  position: absolute;
+  width: 500px;
+  height: 166px;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+}
+
 h1 {
   font-size:35px;
 }
