--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
       <!--</section> -->
       
       <footer>
-          <p><small> contact <a href="minsookim@mednet.ucla.edu">minsookim@mednet.ucla.edu</a></small></p>
+          <p><small> Last updated January 2021 </small></p>
       </footer>
       <!-- <footer>
         {% if site.github.is_project_page %}
